--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*add media screen for other sizes*/
+
 @media screen and (min-width:1000px) {
     .navbar, .container-fluid, .navbar-expand-lg .navbar-collapse, .navbar-expand-lg .navbar-nav {
         flex-direction: column;
@@ -12,7 +14,23 @@
 
 }
 
+.navbar-brand {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+.profile-pic img {
+    display: block;
+    margin-left: 37px;
+}
+
+
+
 i {
     display: inline-block;
     margin-right: 1em;
   }
+
+  .profile-pic {
+    border-radius: 50%;
+ }
