--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,51 @@
     }
 }
 
+@media screen and (min-width:768px) {
+    .navbar, .container-fluid, .navbar-expand-lg .navbar-collapse, .navbar-expand-lg .navbar-nav {
+        flex-direction: column;
+        align-items: flex-start;
+        
+    }
+}
+
+@media screen and (min-width:320px) {
+    .navbar button {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+}
+
 .navbar {
     width: 200px;
     height: 100vh;
     align-items: flex-start;
+
 
 }
 
 .navbar-brand {
     font-size: 1.3em;
     font-weight: bold;
+    padding-bottom: 10px;
 }
+
 
 .profile-pic img {
+    width: 150px;
+    height: 150px;
     display: block;
-    margin-left: 37px;
+    margin-left: 10px;
 }
 
+.nav-item a {
+    font-weight: bold;
+    
+}
 
+.a {
+    color
+}
 
 i {
     display: inline-block;
