--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,11 @@
-/*add media screen for other sizes*/
-
-@media screen and (min-width:1000px) {
-    .navbar, .container-fluid, .navbar-expand-lg .navbar-collapse, .navbar-expand-lg .navbar-nav {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-}
-
-@media screen and (min-width:768px) {
-    .navbar, .container-fluid, .navbar-expand-lg .navbar-collapse, .navbar-expand-lg .navbar-nav {
-        flex-direction: column;
-        align-items: flex-start;
-        
-    }
-}
-
-@media screen and (min-width:320px) {
-    .navbar button {
-        align-items: flex-start;
-        flex-direction: column;
-    }
-}
-
-/*---------------------------------------------------------------------*/
+* {
+    box-sizing: border-box;
+  }
+  
 .navbar {
+    display: inline;
     width: 200px;
-    height: 100vh;
-    align-items: flex-start;
+    height: 100%;
     margin-bottom: 0px;
 }
 
@@ -71,10 +50,13 @@ i {
     width: 100vw;
 
 }
-
+ /*Change*/
 .container {
-    margin-left: 30%;
-    margin-top: 50px;
+    display: flex;
+    max-width: 800px;
+    max-height: 200px;
+    margin-left: 25%;
+    margin-top: 70px;
 }
 
 .container h1, p {
@@ -101,15 +83,66 @@ hr {
     margin-left: 2px;
 }
 
-.big-picture img {
-    position: none;
-    width: 500px;
-    height: 500px;
-    margin-left: 400px;
-    margin-top: -300px;
+ /*Change*/
+.bigpicture img {
+
+    width: 300px;
+    height: 300px;
+    
     
 } 
 
 i {
     color:#096c9b;
 }
+
+ /*Cards*/
+
+ .card-group {
+    display: flex;
+    margin-left: 200px;
+ }
+
+
+ /*add media screen for other sizes*/
+
+@media screen and (min-width:1000px) {
+    .navbar, .container-fluid, .navbar-expand-lg .navbar-collapse, .navbar-expand-lg .navbar-nav {
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+    }
+
+}
+
+/*
+@media screen and (min-width:768px) {
+    .navbar, .container-fluid, .navbar-expand-lg .navbar-collapse, .navbar-expand-lg .navbar-nav {
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+    }
+
+   
+
+    .navbar, .navbar-expand-lg, .navbar-dark,.fixed-top
+    {
+        padding-top: 0px;
+    }
+
+    }
+ /*this is just indication to where 768 starts from*/
+
+
+
+
+
+
+
+
+@media screen and (min-width:320px) {
+    
+ 
+}
+
+/*---------------------------------------------------------------------*/
