--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ i {
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
-    width: 100vw;
+    width: 100%;
 
 }
  /*Changed*/
@@ -134,14 +134,22 @@ h2 {
 }
 
 
+ /*------------------work section--------------------*/
 
 
+ .workcontainer {
+    margin-top: 35px;
+    margin-left: 230px;
+ }
 
+.row { 
+    margin-bottom: 35px;
+}
 
-
-
-
-
+.row img {
+    width: px;
+    height: px;
+}
 
  /*add media screen for other sizes*/
 
