--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,28 @@ h2 {
     height: px;
 }
 
+
+
+
+ /*------------------About me--------------------*/
+
+ .MEcontainer {
+    margin-top: 35px;
+    margin-left: 200px;
+    background: rgb(9,108,155);
+    background: linear-gradient(90deg, rgba(9,108,155,1) 0%, rgba(9,108,155,1) 100%);
+ }
+
+ .MEcontainer img {
+    width: 300px;
+    height: 300px;
+    margin-left: 60px;
+    margin-top: 50px;
+ }
+
+
+
+
  /*add media screen for other sizes*/
 
 @media screen and (min-width:1000px) {
