--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ h2 {
     margin-bottom: 45px;
 }
 
-.row img {
+.workcontainer img {
     width: px;
     height: px;
 }
@@ -164,7 +164,6 @@ h2 {
 .circleimg img {
     margin-bottom: 30px;
 }
-
 
 
  /*------------------About me--------------------*/
